--- a/main.tex
+++ b/main.tex
@@ -50,7 +50,7 @@
 	I would like to thank Lyle Ungar for his insights throughout advising this thesis. I would also like to thank Mark Liberman (CIS, Linguistics, University of Pennsylvania) for his work on the thesis committee. Finally, I would like to thank Li Yao (Computer Science and Operations Research, Universit\'{e} de Montr\'{e}al) from Yoshua Bengio\rq{}s group for the Theano framework and help with starter code.
 	
 	\chapter*{Abstract}
-	Abstract goes here.
+	\input{chapters/abstract}
 	
 	\tableofcontents
 	\listoftables
@@ -81,7 +81,7 @@
 	
 
 	\bibliographystyle{plain}
-	\bibliography{bibliography}
+	\bibliography{reference/bibliography}
 
 
 \end{document}
