--- a/main.tex
+++ b/main.tex
@@ -4,6 +4,8 @@
 \usepackage{setspace}
 \usepackage{hyphenat}
 \usepackage{fancyhdr}
+\usepackage{mathtools}
+\everymath{\displaystyle}
 
 \usepackage{graphicx}
 \graphicspath{ {images/} }
