--- a/main.tex
+++ b/main.tex
@@ -5,6 +5,7 @@
 \usepackage{hyphenat}
 \usepackage{fancyhdr}
 \usepackage{mathtools}
+\usepackage[algoruled]{algorithm2e}
 \everymath{\displaystyle}
 
 \usepackage{graphicx}
@@ -49,7 +50,7 @@
 	\pagenumbering{roman}
 
 	\chapter*{Acknowledgements}
-	I would like to thank Lyle Ungar for his invaluable insights and methods of thinking throughout advising this thesis. I would also like to thank Mark Liberman (CIS, Linguistics, University of Pennsylvania) and  (CIS, University of Pennsylvania) for their work on the thesis committee. Finally, I would like to thank Li Yao (Computer Science and Operations Research, Universit\'{e} de Montr\'{e}al) from Yoshua Bengio\rq{}s group for the Theano framework and help with starter code.
+	I would like to thank Lyle Ungar for his invaluable insights and methods of thinking throughout advising this thesis. I would also like to thank Mark Liberman (CIS, Linguistics, University of Pennsylvania) and Mitch Marcus (CIS, University of Pennsylvania) for their work on the thesis committee. Finally, I would like to thank Li Yao (Computer Science and Operations Research, Universit\'{e} de Montr\'{e}al) from Yoshua Bengio\rq{}s group for the Theano framework and help with starter code.
 	
 	\chapter*{Abstract}
 	\input{chapters/abstract}
