--- a/reference/bibliography.bib
+++ b/reference/bibliography.bib
@@ -31,3 +31,45 @@
   year      = {2005},
   file        = {http://www.stat.berkeley.edu/~jordan/688.pdf}
 }
+
+@article{bengio13a,
+  author    = {Yoshua Bengio and
+               Li Yao and
+               Guillaume Alain and
+               Pascal Vincent},
+  title     = {Generalized Denoising Auto-Encoders as Generative Models},
+  journal   = {CoRR},
+  volume    = {abs/1305.6663},
+  year      = {2013},
+  ee        = {http://arxiv.org/abs/1305.6663},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+
+@inproceedings{vincent08,
+  author    = {Pascal Vincent and
+                Hugo Larochelle and
+                Yoshua Bengio and
+                Pierre-Antoine Manzagol},
+  title     = {Extracting and Composing Robust Features with Denoising Autoencoders},
+  booktitle = {Proceedings of the 25th International Conference on Machine Learning},
+  year      = {2008},
+}
+
+@article{bengio09,
+ author = {Yoshua Bengio},
+ title = {Learning Deep Architectures for AI},
+ journal = {Found. Trends Mach. Learn.},
+ issue_date = {January 2009},
+ volume = {2},
+ number = {1},
+ month = {jan},
+ year = {2009},
+ issn = {1935-8237},
+ pages = {1--127},
+ numpages = {127},
+ url = {http://dx.doi.org/10.1561/2200000006},
+ doi = {10.1561/2200000006},
+ acmid = {1658424},
+ publisher = {Now Publishers Inc.},
+ address = {Hanover, MA, USA},
+} 
