added model3, work on background

--- a/main.tex
+++ b/main.tex
@@ -5,6 +5,7 @@
 \usepackage{hyphenat}
 \usepackage{fancyhdr}
 \usepackage{mathtools}
+\usepackage{amsmath}
 \usepackage[algoruled]{algorithm2e}
 \everymath{\displaystyle}
 
@@ -22,7 +23,7 @@
 	
 	\begin{titlepage}
 		\begin{center}
-			{\singlespacing \LARGE \uppercase{Deep Generative Stochastic Networks for Sequence Prediction: a Recurrent View}\\[12pt]}
+			{\singlespacing \LARGE \uppercase{Deep Generative Stochastic Networks for Sequence Prediction}\\[12pt]}
 			
 			{\Large Markus B. Beissinger\\[12pt]}
 			
@@ -77,6 +78,9 @@
 	
 	\chapter{Model 2: Online method for training a recurrent deep GSN}	
 	\input{chapters/model2}
+
+	\chapter{Model 3: Hybrid method for training a recurrent deep GSN}	
+	\input{chapters/model3}
 	
 	\chapter{Discussion}
 	\input{chapters/discussion}
