--- a/reference/bibliography.bib
+++ b/reference/bibliography.bib
@@ -73,3 +73,41 @@
  publisher = {Now Publishers Inc.},
  address = {Hanover, MA, USA},
 } 
+
+@article{alain12,
+  author    = {Guillaume Alain and
+               Yoshua Bengio and
+               Salah Rifai},
+  title     = {Regularized Auto-Encoders Estimate Local Statistics},
+  journal   = {CoRR},
+  volume    = {abs/1211.4246},
+  year      = {2012},
+  ee        = {http://arxiv.org/abs/1211.4246},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+
+@article{gsn,
+  author    = {Yoshua Bengio and
+               Eric Thibodeau-Laufer and
+               Jason Yosinski},
+  title     = {Deep Generative Stochastic Networks Trainable by Backprop},
+  journal   = {CoRR},
+  volume    = {abs/1306.1091},
+  year      = {2013},
+  ee        = {http://arxiv.org/abs/1306.1091},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+
+@inproceedings {lenet5,
+original =      {orig/lecun-01a.ps.gz},
+author =  {Yann LeCun and
+          Leon Bottou and
+          Yoshua Bengio and
+          Patrick Haffner},
+title =   {Gradient-Based Learning Applied to Document Recognition},
+booktitle =     {Intelligent Signal Processing},
+editors =       {Haykin, S. and Kosko, B.},
+pages =         {306-351},
+publisher =     {IEEE Press},
+year =    {2001}
+}
