intro done, working on related work

--- a/main.tex
+++ b/main.tex
@@ -67,7 +67,7 @@
 	\chapter{Related Work}
 	\input{chapters/related_work}
 	
-	\chapter{Background}
+	\chapter{Background: Deep Architectures}
 	\input{chapters/background}
 	
 	\chapter{General Methodology: Deep Generative Stochastic Networks (GSN)}
@@ -88,10 +88,7 @@
 	\chapter{Conclusion}
 	\input{chapters/conclusion}
 	
-	
-
 	\bibliographystyle{plain}
 	\bibliography{reference/bibliography}
-
 
 \end{document}
