--- a/reference/bibliography.bib
+++ b/reference/bibliography.bib
@@ -45,6 +45,7 @@
   bibsource = {DBLP, http://dblp.uni-trier.de}
 }
 
+
 @inproceedings{vincent08,
   author    = {Pascal Vincent and
                 Hugo Larochelle and
@@ -53,6 +54,15 @@
   title     = {Extracting and Composing Robust Features with Denoising Autoencoders},
   booktitle = {Proceedings of the 25th International Conference on Machine Learning},
   year      = {2008},
+}
+
+@inproceedings{krizhevsky12,
+  author    = {Alex Krizhevsky and
+                Ilya Sutskever and
+                Geoffrey E. Hinton},
+  title     = {ImageNet Classification with Deep Convolutional Neural Networks},
+  booktitle = {NIPS 2012: Neural Information Processing Systems},
+  year      = {2012},
 }
 
 @article{bengio09,
@@ -110,4 +120,104 @@ editors =       {Haykin, S. and Kosko, B.},
 pages =         {306-351},
 publisher =     {IEEE Press},
 year =    {2001}
+}
+
+@inproceedings {seide11,
+author       = {Frank Seide and Gang Li and Dong Yu},
+booktitle    = {Interspeech 2011},
+month        = {August},
+publisher    = {International Speech Communication Association},
+title        = {Conversational Speech Transcription Using Context-Dependent Deep Neural Networks},
+url          = {http://research.microsoft.com/apps/pubs/default.aspx?id=153169},
+year         = {2011},
+}
+
+@inproceedings{rezende14,
+  author    = {Danilo J. Rezende and Shakir Mohamed and Daan Wierstra},
+  title     = {Stochastic Backpropagation and Approximate Inference in Deep Generateive Models},
+  booktitle = {Proceedings of the 31st International Conference on Machine Learning},
+  year      = {2014},
+}
+
+@inproceedings{andrew12,
+  author    = {Galen Andrew and Jeff Bilmes},
+  title     = {Sequential Deep Belief Networks},
+  booktitle = {2012 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
+  year      = {2012},
+}
+
+@inproceedings{andrew13,
+  author    = {Galen Andrew and Jeff Bilmes},
+  title     = {Backpropagation in Sequential Deep Neural Networks},
+  booktitle = {NIPS Deep Learning Workshop},
+  year      = {2013},
+}
+
+@inproceedings{socher11,
+author = {Richard Socher and Cliff C. Lin and Andrew Y. Ng and Christopher D. Manning},
+title = {Parsing Natural Scenes and Natural Language with Recursive Neural Networks},
+booktitle = {Proceedings of the 26th International Conference on Machine Learning (ICML)},
+year = {2011}
+}
+
+@techreport{sutskever06,
+    author = {Ilya Sutskever and Geoffrey Hinton},
+    title = {Learning multilevel distributed representations for high-dimensional sequences},
+    institution = {University of Toronto},
+    year = {2006}
+}
+
+@inproceedings{sutskever08,
+author = {Ilya Sutskever and Geoffrey Hinton and Graham Taylor},
+title = {The Recurrent Temporal Restricted Boltzmann Machine},
+booktitle = {Advances in Neural Information Processing Systems 21 (NIPS 2008)},
+year = {2008}
+}
+
+@techreport{lockett09,
+title={Temporal Convolution Machines for Sequence Learning},
+author={Alan J Lockett and Risto Miikkulainen},
+number={AI-09-04},
+institution={Department of Computer Sciences, the University of Texas at Austin},
+year={2009}
+}
+
+@inproceedings{lewandowski12,
+author = {Nicolas Boulanger-Lewandowski and Yoshua Bengio and Pascal Vincent},
+title = {Modeling Temporal Dependencies in High-Dimensional Sequences: Application to Polyphonic Music Generation and Transcription},
+booktitle = {Proceedings of the 29th International Conference on Machine Learning (ICML 2012)},
+year = {2012}
+}
+
+@article{hinton06,
+ author = {Geoffrey E. Hinton and Simon Osindero and Yee-Whye Teh},
+ title = {A Fast Learning Algorithm for Deep Belief Nets},
+ journal = {Neural Computation},
+ issue_date = {July 2006},
+ volume = {18},
+ number = {7},
+ month = jul,
+ year = {2006},
+ issn = {0899-7667},
+ pages = {1527--1554},
+ numpages = {28},
+ url = {http://dx.doi.org/10.1162/neco.2006.18.7.1527},
+ doi = {10.1162/neco.2006.18.7.1527},
+ acmid = {1161605},
+ publisher = {MIT Press},
+ address = {Cambridge, MA, USA},
+} 
+
+@inproceedings{ranzato07,
+author = {Marc'Aurelio Ranzato and Yann LeCun},
+title = {A Sparse and Locally Shift Invariant Feature Extractor Applied to Document Images},
+booktitle = {International Conference on Document Analysis and Recognition (ICDAR 2007)},
+year = {2007}
+}
+
+@inproceedings{wang13,
+author = {Mengqiu Wang and Christopher D. Manning},
+title = {Effect of Non-linear Deep Architecture in Sequence Labeling},
+booktitle = {Proceedings of the 6th International Joint Conference on Natural Language Processing (IJCNLP)},
+year = {2013}
 }
