--- a/reference/bibliography.bib
+++ b/reference/bibliography.bib
@@ -221,3 +221,10 @@ title = {Effect of Non-linear Deep Architecture in Sequence Labeling},
 booktitle = {Proceedings of the 6th International Joint Conference on Natural Language Processing (IJCNLP)},
 year = {2013}
 }
+
+@inproceedings{bengio_workshop,
+author = {Yoshua Bengio},
+title = {Invited Tutorial: Deep Learning of Representations},
+booktitle = {Proceedings of the 27th Canadian Conference on Artificial Intelligence},
+year = {2014}
+}
