--- a/main.tex
+++ b/main.tex
@@ -88,7 +88,7 @@
 	\chapter{Model 3: Hybrid method for training a recurrent deep GSN}	
 	\input{chapters/model3}
 	
-	\chapter{Discussion}
+	\chapter{Discussion of Results}
 	\input{chapters/discussion}
 	
 	\chapter{Conclusion}
