--- a/reference/bibliography.bib
+++ b/reference/bibliography.bib
@@ -53,7 +53,7 @@
                 Pierre-Antoine Manzagol},
   title     = {Extracting and Composing Robust Features with Denoising Autoencoders},
   booktitle = {Proceedings of the 25th International Conference on Machine Learning},
-  year      = {2008},
+  year      = {2008}
 }
 
 @inproceedings{krizhevsky12,
@@ -62,7 +62,7 @@
                 Geoffrey E. Hinton},
   title     = {ImageNet Classification with Deep Convolutional Neural Networks},
   booktitle = {NIPS 2012: Neural Information Processing Systems},
-  year      = {2012},
+  year      = {2012}
 }
 
 @article{bengio09,
@@ -81,7 +81,7 @@
  doi = {10.1561/2200000006},
  acmid = {1658424},
  publisher = {Now Publishers Inc.},
- address = {Hanover, MA, USA},
+ address = {Hanover, MA, USA}
 } 
 
 @article{alain12,
@@ -129,28 +129,28 @@ month        = {August},
 publisher    = {International Speech Communication Association},
 title        = {Conversational Speech Transcription Using Context-Dependent Deep Neural Networks},
 url          = {http://research.microsoft.com/apps/pubs/default.aspx?id=153169},
-year         = {2011},
+year         = {2011}
 }
 
 @inproceedings{rezende14,
   author    = {Danilo J. Rezende and Shakir Mohamed and Daan Wierstra},
   title     = {Stochastic Backpropagation and Approximate Inference in Deep Generateive Models},
   booktitle = {Proceedings of the 31st International Conference on Machine Learning},
-  year      = {2014},
+  year      = {2014}
 }
 
 @inproceedings{andrew12,
   author    = {Galen Andrew and Jeff Bilmes},
   title     = {Sequential Deep Belief Networks},
   booktitle = {2012 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
-  year      = {2012},
+  year      = {2012}
 }
 
 @inproceedings{andrew13,
   author    = {Galen Andrew and Jeff Bilmes},
   title     = {Backpropagation in Sequential Deep Neural Networks},
   booktitle = {NIPS Deep Learning Workshop},
-  year      = {2013},
+  year      = {2013}
 }
 
 @inproceedings{socher11,
@@ -205,7 +205,7 @@ year = {2012}
  doi = {10.1162/neco.2006.18.7.1527},
  acmid = {1161605},
  publisher = {MIT Press},
- address = {Cambridge, MA, USA},
+ address = {Cambridge, MA, USA}
 } 
 
 @inproceedings{ranzato07,
@@ -227,4 +227,129 @@ author = {Yoshua Bengio},
 title = {Invited Tutorial: Deep Learning of Representations},
 booktitle = {Proceedings of the 27th Canadian Conference on Artificial Intelligence},
 year = {2014}
+}
+
+@article{ozair14,
+  author    = {Sherjil Ozair and
+               Li Yao and
+               Yoshua Bengio},
+  title     = {Multimodal Transitions for Generative Stochastic Networks},
+  journal   = {CoRR},
+  volume    = {abs/1312.5578},
+  year      = {2013},
+  ee        = {http://arxiv.org/abs/1312.5578},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+
+@inproceedings{zhou14,
+author = {Jian Zhou and Olga G. Troyanskaya},
+title = {Deep Supervised and Convolutional Generative Stochastic Network for Protein Secondary Structure Prediction},
+booktitle = {Proceedings of the 31st International Conference on Machine Learning (ICML 2014)},
+year = {2014}
+}
+
+@inproceedings{larochelle07,
+ author = {Hugo Larochelle and Dumitru Erhan and Aaron Courville and James Bergstra and Yoshua Bengio},
+ title = {An Empirical Evaluation of Deep Architectures on Problems with Many Factors of Variation},
+ booktitle = {Proceedings of the 24th International Conference on Machine Learning},
+ series = {ICML '07},
+ year = {2007},
+ isbn = {978-1-59593-793-3},
+ location = {Corvalis, Oregon},
+ pages = {473--480},
+ numpages = {8},
+ url = {http://doi.acm.org/10.1145/1273496.1273556},
+ doi = {10.1145/1273496.1273556},
+ acmid = {1273556},
+ publisher = {ACM},
+ address = {New York, NY, USA}
+}
+
+@article{bengio12a,
+  author    = {Yoshua Bengio and
+               Gr{\'e}goire Mesnil and
+               Yann Dauphin and
+               Salah Rifai},
+  title     = {Better Mixing via Deep Representations},
+  journal   = {CoRR},
+  volume    = {abs/1207.4404},
+  year      = {2012},
+  ee        = {http://arxiv.org/abs/1207.4404},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+
+@inproceedings{bengio06,
+    author = {Yoshua Bengio and Pascal Lamblin and Dan Popovici and Hugo Larochelle},
+     title = {Greedy Layer-Wise Training of Deep Networks},
+      year = {2007},
+     pages = {153--160},
+       url = {http://www.iro.umontreal.ca/~lisa/pointeurs/BengioNips2006All.pdf},
+  crossref = {NIPS19}
+}
+
+@inproceedings{socher11a,
+ author = {Richard Socher and Jeffrey Pennington and Eric H. Huang and Andrew Y. Ng and Christopher D. Manning},
+ title = {Semi-supervised Recursive Autoencoders for Predicting Sentiment Distributions},
+ booktitle = {Proceedings of the Conference on Empirical Methods in Natural Language Processing},
+ series = {EMNLP '11},
+ year = {2011},
+ isbn = {978-1-937284-11-4},
+ location = {Edinburgh, United Kingdom},
+ pages = {151--161},
+ numpages = {11},
+ url = {http://dl.acm.org/citation.cfm?id=2145432.2145450},
+ acmid = {2145450},
+ publisher = {Association for Computational Linguistics},
+ address = {Stroudsburg, PA, USA}
+}
+
+@article{rolfe13,
+  author    = {Jason Tyler Rolfe and
+               Yann LeCun},
+  title     = {Discriminative Recurrent Sparse Auto-Encoders},
+  journal   = {CoRR},
+  volume    = {abs/1301.3775},
+  year      = {2013},
+  ee        = {http://arxiv.org/abs/1301.3775},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+
+@inproceedings{rifai12,
+    author = {Salah Rifai and Yoshua Bengio and Yann Dauphin and Pascal Vincent},
+     title = {A Generative Process for Sampling Contractive Auto-Encoders},
+      year = {2012},
+  location = {Edinburgh, Scotland, U.K.},
+  crossref = {ICML12}
+}
+
+@InProceedings{ bergstra-proc-scipy-2010,
+  author    = { James Bergstra and Olivier Breuleux and Fr\'ed\'eric Bastien and Pascal Lamblin and Razvan Pascanu and Guillaume Desjardins and Joseph Turian and David Warde-Farley and Yoshua Bengio },
+  title     = { Theano: A CPU and GPU Math Compiler in Python },
+  booktitle = { Proceedings of the 9th Python in Science Conference },
+  pages     = { 3 - 10 },
+  year      = { 2010 },
+  editor    = { St\'efan van der Walt and Jarrod Millman }
+}
+
+@article{bengio12b,
+  author    = {Yoshua Bengio and
+               Aaron C. Courville and
+               Pascal Vincent},
+  title     = {Unsupervised Feature Learning and Deep Learning: A Review
+               and New Perspectives},
+  journal   = {CoRR},
+  volume    = {abs/1206.5538},
+  year      = {2012},
+  ee        = {http://arxiv.org/abs/1206.5538},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+
+@incollection{Bengio+chapter2007,
+     author = {Yoshua Bengio and Yann LeCun},
+     editor = {Bottou, {L{\'{e}}on} and Chapelle, Olivier and DeCoste, D. and Weston, J.},
+      title = {Scaling Learning Algorithms towards {AI}},
+  booktitle = {Large Scale Kernel Machines},
+       year = {2007},
+  publisher = {MIT Press},
+        url = {http://www.iro.umontreal.ca/~lisa/pointeurs/bengio+lecun_chapter2007.pdf}
 }
